# fastapi-vue-llm-template

./: .gitignore  docker-compose.yml
backend/: README.md  pyproject.toml  settings.toml
backend/api/: config.py  main.py
backend/api/auth/: google.py
backend/api/datastores/sql/: crud.py  database.py  models.py  schemas.py
backend/api/plugins/llms/: __init__.py  interface.py  ollama.py  vertexai.py
backend/api/v1/: prompt.py  system.py  user.py
backend/docker/: Dockerfile
frontend/: index.html  package.json
frontend/src/: RestApiClient.js  main.js  settings.js
frontend/src/components/: ToggleLLM.vue  UserAvatar.vue
frontend/src/layouts/default/: AppBar.vue  Default.vue
frontend/src/plugins/: vuetify.js
frontend/src/router/: index.js
frontend/src/stores/: app.js
frontend/src/views/: Home.vue  Login.vue  Prompt.vue
